--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 *.o
 *.obj
 
+# Retarded vs created files
+*.db
+*.ipch
+*.suo
+
 # Precompiled Headers
 *.gch
 *.pch
@@ -27,6 +32,7 @@
 *.lib
 
 # Executables
+*.dll
 *.exe
 *.out
 *.app
