Added two more interfaces, some headers, styling changes

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -169,14 +169,18 @@
     <ClInclude Include="Antario\SDK\CEntity.h" />
     <ClInclude Include="Antario\SDK\CInput.h" />
     <ClInclude Include="Antario\SDK\ClientClass.h" />
+    <ClInclude Include="Antario\SDK\Color.h" />
     <ClInclude Include="Antario\SDK\Definitions.h" />
     <ClInclude Include="Antario\SDK\IBaseClientDll.h" />
     <ClInclude Include="Antario\SDK\IClientEntity.h" />
+    <ClInclude Include="Antario\SDK\IClientEntityList.h" />
     <ClInclude Include="Antario\SDK\IClientMode.h" />
     <ClInclude Include="Antario\SDK\IClientNetworkable.h" />
     <ClInclude Include="Antario\SDK\IClientRenderable.h" />
     <ClInclude Include="Antario\SDK\IClientThinkable.h" />
     <ClInclude Include="Antario\SDK\IClientUnknown.h" />
+    <ClInclude Include="Antario\SDK\IVEngineClient.h" />
+    <ClInclude Include="Antario\SDK\PlayerInfo.h" />
     <ClInclude Include="Antario\Utils\Interfaces.h" />
     <ClInclude Include="Antario\SDK\Recv.h" />
     <ClInclude Include="Antario\SDK\Vector.h" />
