Change utils, add bhop
Changed utils so functions inside the class are not static

Added simple misc class which for now has bhop, but will later contain much more basic stuff like recoil/spread crosshair

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="Antario\Utils\NetvarManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Antario\Features\Misc.h" />
     <ClInclude Include="Antario\Hooks.h" />
     <ClInclude Include="Antario\SDK\CGlobalVarsBase.h" />
     <ClInclude Include="Antario\SDK\CHandle.h" />
