--- a/Antario.vcxproj.filters
+++ b/Antario.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="Antario\SDK\CPrediction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Antario\Features\Misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
