Added Enginepred, moved windows header
Added engine prediction with tickbase fix, not tested tho

Moved Windows.h header to definitions -> easier to manage

Undefined GetProp in NetvarManager to make it working with RecvProp

Added some more C_BaseEntity netvars as they will come in handy later on.

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -169,6 +169,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Antario\Features\EnginePrediction.cpp" />
     <ClCompile Include="Antario\Hooks.cpp" />
     <ClCompile Include="Antario\DLLMain.cpp" />
     <ClCompile Include="Antario\Utils\DrawManager.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Antario\Utils\NetvarManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Antario\Features\EnginePrediction.h" />
     <ClInclude Include="Antario\Features\Misc.h" />
     <ClInclude Include="Antario\Hooks.h" />
     <ClInclude Include="Antario\SDK\CGlobalVarsBase.h" />
