--- a/Antario.vcxproj.filters
+++ b/Antario.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Antario\Utils\DrawManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Antario\Features\EnginePrediction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Antario\Hooks.h">
@@ -114,6 +117,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Antario\Utils\DrawManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Antario\Features\EnginePrediction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
