Changes to DrawManager and D3DFont
Activated D3D Hooks for drawing / reseting. To draw I will use Present hook. EndScene will be used ONLY for initialization, and maybe for imgui if someone would want to use it.

Added CD3DFont class. It's not custom made, its a class from nvidia dev sources as its enough for us.

Fixed a few errors from the previous pull. Didn't notice some of these changes that were just wrong.

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Antario\Features\EnginePrediction.cpp" />
     <ClCompile Include="Antario\Hooks.cpp" />
     <ClCompile Include="Antario\DLLMain.cpp" />
+    <ClCompile Include="Antario\Utils\D3DFont.cpp" />
     <ClCompile Include="Antario\Utils\DrawManager.cpp" />
     <ClCompile Include="Antario\Utils\Interfaces.cpp" />
     <ClCompile Include="Antario\Utils\NetvarManager.cpp" />
@@ -199,6 +200,7 @@
     <ClInclude Include="Antario\SDK\IVEngineClient.h" />
     <ClInclude Include="Antario\SDK\PlayerInfo.h" />
     <ClInclude Include="Antario\Settings.h" />
+    <ClInclude Include="Antario\Utils\D3DFont.h" />
     <ClInclude Include="Antario\Utils\DrawManager.h" />
     <ClInclude Include="Antario\Utils\Interfaces.h" />
     <ClInclude Include="Antario\SDK\Recv.h" />
