Menu cursor sketch, WNDProc hook
I'm starting to get ready with my D3D Menu. For now I've made a CSGO-simmilar mouse cursor, but had to do it in a sketchy way as I can't enable antialias for one trianglestrip call.

Added WNDProc hook, which we will use later to get mouse / keyboard input to our menu / cheat.
Made INSERT as an activation button and working when its held.

Also I've added a quick render staty function, that sets up some basic flags for lines mostly so they look nice and can be transparent (alpha blending, etc.)

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="Antario\Features\EnginePrediction.h" />
     <ClInclude Include="Antario\Features\Misc.h" />
     <ClInclude Include="Antario\Hooks.h" />
+    <ClInclude Include="Antario\Menu.h" />
     <ClInclude Include="Antario\SDK\CGlobalVarsBase.h" />
     <ClInclude Include="Antario\SDK\CHandle.h" />
     <ClInclude Include="Antario\SDK\CEntity.h" />
