--- a/Antario.vcxproj.filters
+++ b/Antario.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Antario\Utils\D3DFont.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Antario\Menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Antario\Hooks.h">
