Fix menu not drawing in-game
Altough render-states should fix that, I've created a new state block to keep them out of csgo.

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.o
 *.obj
 
-# Retarded vs created files
+# MSVC binary files
 *.db
 *.ipch
 *.suo
@@ -21,6 +21,8 @@
 *.opendb
 *.iobj
 *.ipdb
+*.xml
+*.lastcodeanalysissucceeded
 
 # Precompiled Headers
 *.gch
