Added Settings parser
Added settings parser skeleton with easy implementation of your own one. I personally used tinyxml2, but you can use public .ini parsers as well as save settings by yourself with fstream.

It works thanks to child system in the menu. You can loop through every setting that can be changed in the menu and save /load it.

--- a/Antario.vcxproj.filters
+++ b/Antario.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Antario\Utils\GlobalVars.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Antario\Settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Antario\Hooks.h">
