--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Antario\Hooks.cpp" />
     <ClCompile Include="Antario\DLLMain.cpp" />
     <ClCompile Include="Antario\Menu.cpp" />
+    <ClCompile Include="Antario\Settings.cpp" />
     <ClCompile Include="Antario\Utils\D3DFont.cpp" />
     <ClCompile Include="Antario\Utils\DrawManager.cpp" />
     <ClCompile Include="Antario\Utils\GlobalVars.cpp" />
