Moved menu source to different folder - basic cleanup

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -93,6 +93,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Antario\Features\EnginePrediction.cpp" />
+    <ClCompile Include="Antario\GUI\GUI.cpp" />
     <ClCompile Include="Antario\Hooks.cpp" />
     <ClCompile Include="Antario\DLLMain.cpp" />
     <ClCompile Include="Antario\Menu.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="Antario\Features\EnginePrediction.h" />
     <ClInclude Include="Antario\Features\Features.h" />
     <ClInclude Include="Antario\Features\Misc.h" />
+    <ClInclude Include="Antario\GUI\GUI.h" />
     <ClInclude Include="Antario\Hooks.h" />
     <ClInclude Include="Antario\Menu.h" />
     <ClInclude Include="Antario\SDK\CGlobalVarsBase.h" />
