--- a/Antario.vcxproj.filters
+++ b/Antario.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Antario\GUI\GUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Antario\Utils\Font.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Antario\Hooks.h">
@@ -171,6 +174,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Antario\GUI\GUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Antario\Utils\Font.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
