Update font renderer
* Full support for emoji
* Support for antialiased and non-antialiased fonts
* Full template specification for strings
* Font "finder" - searches through registry to find a font by friendly name instead of the filename. Needs some tweaks to use user-installed fonts.
* Tweaks for optimalization

More changes:
* Changed how i'm getting WeaponInfo_t - now using CWeaponSystem.
* Supressed retarded 4099 linker warning.

--- a/Antario.vcxproj
+++ b/Antario.vcxproj
@@ -74,6 +74,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <IgnoreSpecificDefaultLibraries>libcmt.lib</IgnoreSpecificDefaultLibraries>
+      <AdditionalOptions>/ignore:4099 %(AdditionalOptions)</AdditionalOptions>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
